--- a/UI/LopHoc/FormLichHoc.form
+++ b/UI/LopHoc/FormLichHoc.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+<Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JDialogFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="2"/>
     <Property name="title" type="java.lang.String" value="L&#x1ecb;ch H&#x1ecd;c"/>
@@ -2401,7 +2401,6 @@
               <Color blue="33" green="0" red="99" type="rgb"/>
             </Property>
             <Property name="horizontalAlignment" type="int" value="0"/>
-            <Property name="text" type="java.lang.String" value="12"/>
           </Properties>
         </Component>
       </SubComponents>
